--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -34,5 +34,8 @@
 
 
     "Users":  "Usuarios",
-    "Home":  "Inicio"
+    "Home":  "Inicio",
+    "Introduction":  "Introducción",
+    "Definition":  "Definición",
+    "Create a PQR":  "Crear un PQR"
 }
