--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -37,5 +37,6 @@
     "Home":  "Inicio",
     "Introduction":  "Introducción",
     "Definition":  "Definición",
-    "Create a PQR":  "Crear un PQR"
+    "Create a PQR":  "Crear un PQR",
+    "New":  "Nuevo"
 }
