--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -38,5 +38,6 @@
     "Introduction":  "Introducción",
     "Definition":  "Definición",
     "Create a PQR":  "Crear un PQR",
-    "New":  "Nuevo"
+    "New":  "Nuevo",
+    "PQR": "PQR"
 }
