--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -39,5 +39,10 @@
     "Definition":  "Definición",
     "Create a PQR":  "Crear un PQR",
     "New":  "Nuevo",
-    "PQR": "PQR"
+    "PQR": "PQR",
+    "Create PQR": "Crear PQR",
+    "PQR type": "Tipo de PQR",
+    "Select": "Seleccione",
+    "Subject": "Asunto",
+    "Send": "Enviar"
 }
