--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -8,6 +8,7 @@
     "Register": "Registro",
     "Name": "Nombre",
     "Confirm Password": "Confirmar contraseña",
+    "Change Password": "Cambiar contraseña",
     "Reset Password": "Restablecer contraseña",
     "Reset Password Notification": "Aviso para restablecer contraseña",
     "You are receiving this email because we received a password reset request for your account.": "Estás recibiendo este email porque se ha solicitado un cambio de contraseña para tu cuenta.",
